Feat: OCR, Claude api 사용 서비스 메서드 구현 - getSummarizedText : Claude API 를 통해 요약본 생성하는 서비스 메서드 구현 - getTextByImgFileNameWithOcr : OCR 을 통해 이미지를 통해 텍스트 반환하는 서비스 메서드 구현